public/assets/main.css
body {
	background: #141414;
	font-family: "Ubuntu Mono",Menlo,Monaco,Consolas,"Courier New",monospace;
	color: rgba(211, 211, 211, 0.5);
}
body::before {
	content: " ";
	display: block;
	width: 200px;
	height: 200px;
	position: absolute;
	top: 0;
	right: -15px;
	background-image: url("flying-mole.svg");
	background-repeat: no-repeat;
	background-size: contain;
	transform: rotate(-15deg);
	opacity: 0.3;
}
pre {
	background: none;
	border: none;
	color: inherit;
}
hr {
	border-color: rgba(211, 211, 211, 0.1);
}
.btn, .btn:hover, .btn:active, .btn.active {
	color: inherit;
}
.btn.btn-default {
	background-color: rgba(0, 0, 0, 0.2);
	border-color: rgba(0, 0, 0, 0.3);
}
.btn.btn-default:hover {
	background-color: rgba(0, 0, 0, 0.1);
}
.btn.btn-default:active, .btn.btn-default.active {
	background-color: rgba(0, 0, 0, 0.3);
}
.btn.btn-primary {
	background-color: rgba(0, 100, 200, 0.2);
	border-color: rgba(0, 0, 0, 0.3);
}
.btn.btn-primary:hover {
	background-color: rgba(0, 100, 200, 0.3);
}
.btn.btn-primary:active, .btn.btn-primary.active {
	background-color: rgba(0, 100, 200, 0.3);
}
.btn.btn-danger {
	background-color: rgba(255, 0, 0, 0.2);
	border-color: rgba(0, 0, 0, 0.3);
}
.btn.btn-danger:hover {
	background-color: rgba(255, 0, 0, 0.3);
}
.btn.btn-danger:active, .btn.btn-danger.active {
	background-color: rgba(255, 0, 0, 0.3);
}

.form-control {
	background: none;
	box-shadow: none;
	border: none;
	border-radius: 0;
	border-bottom: 1px solid rgba(0, 0, 0, 0.3);
}
.form-control:focus {
	box-shadow: none;
	border-bottom-color: rgba(0, 100, 200, 0.3);
}
input[type="number"].form-control {
	-moz-appearance: textfield;
}

.form-inline input[type="number"].form-control {
	width: 65px;
}

#console {
	height: 200px;
	overflow: auto;
}
#console .error {
	color: rgb(180, 0, 0);
}
#console .info {
	color: rgb(0, 100, 200);
}

.joystick {
	position: relative;
	width: 300px;
	height: 300px;
	border: 5px solid rgba(211, 211, 211, 0.2);
	border-radius: 50%;
	margin: 10px auto;
}
.joystick .handle {
	position: absolute;
	width: 16px;
	height: 16px;
	border-radius: 50%;
	background-color: rgb(211, 211, 211);
	opacity: 0.2;
	pointer-events: none;
}
.joystick.active .handle {
	opacity: 1;
}

/* @see http://brennaobrien.com/blog/2014/05/style-input-type-range-in-every-browser.html */
input[type="range"] {
	border: 10px solid transparent;
	background: none;
}
input[type="range"]::-moz-range-track {
	background: rgb(58, 58, 58);
	border: none;
	border-radius: 3px;
}
input[type="range"]::-moz-range-thumb {
	border: none;
	height: 16px;
	width: 16px;
	border-radius: 50%;
	background: rgb(58, 58, 58);
}
input[type="range"]:active::-moz-range-thumb {
	background: rgb(211, 211, 211);
}

input[type="range"][orient="vertical"] {
	-webkit-appearance: slider-vertical;
}
input[type="range"]:not([orient="vertical"])::-moz-range-track {
	height: 5px;
}
input[type="range"][orient="vertical"]::-moz-range-track {
	width: 5px;
}

#power-input {
	width: 100px;
	height: 300px;
	margin: auto;
}

select {
	-webkit-appearance:none;
	-moz-appearance:none;
	appearance:none;
}

.radio input[type="radio"] {
	display: none;
}
.radio input[type="radio"] + label::before {
	content: " ";
	display: inline-block;
	width: 14px;
	height: 14px;
	margin-right: 7px;
	border: 2px solid rgb(58, 58, 58);
	border-radius: 16px;
	transition: 0.3s all;

}
.radio input[type="radio"]:checked + label::before {
	background-color: rgb(58, 58, 58);
}

.switch {
	display: inline-block;
	margin: 10px;
}
.switch input[type="checkbox"] {
	display: none;
}
.switch input[type="checkbox"] + label {
	display: inline-block;
	height: 16px;
	width: 32px;
	margin-bottom: -3px; /* TODO */
	background-image: radial-gradient(16px at 50% 50%, rgb(100, 0, 0) 0%, rgb(100, 0, 0) 49%, transparent 50%);
	background-size: 16px 16px;
	background-repeat: no-repeat;
	background-position: left center;
	transition: 0.3s background-position;
}
.switch input[type="checkbox"]:checked + label {
	background-image: radial-gradient(16px at 50% 50%, rgb(0, 58, 0) 0%, rgb(0, 58, 0) 49%, transparent 50%);
	background-position: right center;
}
.switch input[type="checkbox"] + label:before {
	display: block;
	content: " ";
	width: 32px;
	height: 5px;
	margin-top: 5px;
	background-color: rgb(100, 0, 0);
	border-radius: 3px;
}
.switch input[type="checkbox"]:checked + label:before {
	display: block;
	content: " ";
	width: 32px;
	height: 5px;
	margin-top: 5px;
	background-color: rgb(0, 58, 0);
	border-radius: 3px;
}

.quadcopter-schema {
	fill: rgb(58, 58, 58);
	transition: 0.3s transform;
}
.quadcopter-schema g {
	transition: 0.3s fill;
}
#quadcopter-top {
	width: 300px;
	height: 300px;
}
.quadcopter-side {
	width: 300px;
	height: 75px;
	margin: 37px 0;
}

#camera-video canvas {
	display: block;
	margin: auto;
}

.graph-ctn canvas {
	max-width: 100%;
	display: block;
}

